<resources>
    <string name="app_name">Fitness Notes</string>
    <string name="create_button">CREATE WORKOUT</string>
    <string name="view_workouts">VIEW NOTES</string>
    <string name="main_page_header">Fitness Notes</string>
    <string name="workout_name">Enter Workout Name</string>
    <string name="workout_description">Workout Description</string>
    <string name="form_detail">Create Workout Note</string>
    <string name="customize_plan">Customize Workout Plan</string>
    <string name="randomize_button">RANDOMIZE WORKOUT</string>
    <string name="generate_plan_button">GENERATE WORKOUT PLAN</string>
    <string name="workout_name_labl">Workout Name:</string>
    <string name="workout_description_labl">Description:</string>
    <string name="edit_workout_item_lbl">Edit Workout Note</string>
    <string name="update_button">UPDATE NOTE</string>
    <string name="delete_button">DELETE NOTE</string>
    <string name="add_requirement_button">ADD CONSTRAINT</string>
    <string name="number_of_workouts">ENTER NUMBER OF EXERCISES [1, 10]</string>
    <string name="name_label">Name</string>
    <string name="muscle_group_label">Muscle Group</string>
    <string name="description_label">Description</string>
    <string name="add_muscle_group">Add A Muscle Group</string>
</resources>