<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:layout_centerHorizontal="true"
    android:padding="10dp"
    tools:context=".MainActivity">


    <TextView

        android:id="@+id/TextView01"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/app_name"
        android:text="@string/app_name"
        android:textIsSelectable="false"
        android:textSize="30sp"
        tools:text="@string/app_name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/workout_name_labl"
        android:layout_marginTop="3dp"
        android:autofillHints=""
        android:background="@drawable/textinputborder"
        android:ems="10"
        android:hint="@string/workout_name"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView01" />

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/workout_description_lbl"
        android:layout_marginTop="3dp"
        android:autofillHints=""
        android:background="@drawable/textinputborder"
        android:ems="10"
        android:hint="@string/workout_description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_marginTop="10dp" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/create_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="30dp"
        android:onClick="onCreateNewNote"
        android:text="@string/create_button"
        app:backgroundTint="#4CAF50"
        android:background="#4CAF50"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/create_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="0dp"
        android:weightSum="100">


        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/view_notes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FF5722"
            android:text="@string/view_workouts"
            app:backgroundTint="#FF5722"
            android:layout_weight="50"
            android:onClick="onSeeNotes"/>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FF5722"
            android:text="@string/randomize_button"
            app:backgroundTint="#FF5722"
            android:layout_weight="50"/>

    </LinearLayout>




    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView01"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/form_detail"
        android:textColor="#21252B"
        android:textSize="18sp"
        android:textStyle="bold" />



    <TextView
        android:id="@+id/workout_name_labl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="22dp"
        android:hint="@string/workout_name"
        android:text="@string/workout_name_labl"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/workout_description_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginTop="5dp"
        android:hint="@string/workout_description"
        android:text="@string/workout_description_labl"
        android:textColor="#000000"
        android:textSize="16sp" />

</RelativeLayout>