<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomizeRandomWorkoutView"
    android:padding="10dp">


    <TextView

        android:id="@+id/TextView01"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/customize_plan"
        android:text="@string/app_name"
        android:textIsSelectable="false"
        android:textSize="30sp"
        tools:text="@string/customize_plan"

        />
<!--    android:textAppearance="textAppearanceHeadline2"-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/spinner"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView01"
        android:layout_marginTop="100dp"
        >

        <AutoCompleteTextView
            android:id="@+id/spinner_autoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/textinputborder"
        android:ems="10"
        android:hint="@string/number_of_workouts"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView01"
        android:layout_below="@+id/spinner"
        android:layout_marginTop="10dp"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/number_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/textButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"

        android:layout_alignEnd="@+id/name"
        android:layout_alignRight="@+id/name"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:onClick="addConstraint"
        android:text="@string/add_requirement_button" />

    <Button
        android:id="@+id/containedButton"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/generate_plan_button"
        app:backgroundTint="#4CAF50"
        android:onClick="generateWorkoutPlan"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@+id/containedButton"
        android:layout_below="@+id/textButton"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</RelativeLayout>