<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerHorizontal="true"
    android:padding="10dp"
    tools:context=".EditNoteView">


    <TextView

        android:id="@+id/TextView01"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/edit_workout_item_lbl"
        android:text="@string/app_name"
        android:textIsSelectable="false"
        android:textSize="30sp"
        tools:text="@string/edit_workout_item_lbl"
       />
<!--    android:textAppearance="textAppearanceHeadline2"-->



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/textinputborder"
        android:ems="10"
        android:hint="@string/workout_name"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView01"
        android:layout_below="@+id/TextView01"
        android:layout_marginTop="133dp"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginTop="3dp"
        android:autofillHints=""
        android:background="@drawable/textinputborder"
        android:ems="10"
        android:hint="@string/workout_description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"


        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/spinner"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_marginTop="10dp"
        >

        <AutoCompleteTextView
            android:id="@+id/spinner_autoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

<!--    <Spinner-->
<!--        android:id="@+id/spinner"-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/description"-->
<!--        android:layout_marginTop="10dp" />-->

    <Button
        android:id="@+id/create_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="30dp"
        android:background="#4CAF50"
        android:onClick="onUpdateNote"
        android:text="@string/update_button"
        app:backgroundTint="#4CAF50" />

    <Button
        android:id="@+id/delete_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="10dp"
        android:background="#4CAF50"
        android:onClick="onUpdateNote"
        android:text="@string/delete_button"
        app:backgroundTint="#E91E63" />








</RelativeLayout>