<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewNoteActivity"
    android:background="#DFDFDF"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="85"
            android:fadingEdgeLength="3dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="4dp"
            app:cardMaxElevation="4dp"
            app:contentPadding="10dp"
            app:contentPaddingBottom="10dp"
            app:contentPaddingLeft="10dp"
            app:contentPaddingRight="10dp"
            app:contentPaddingTop="10dp"
            app:cardCornerRadius="11dp">

            <TextView
                android:id="@+id/workout_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/name_label"
                android:textColor="#424242"
                android:textSize="30sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:fadingEdgeLength="3dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="4dp"
            app:cardMaxElevation="4dp"
            android:layout_weight="15"
            app:contentPadding="10dp"
            app:contentPaddingBottom="10dp"
            app:contentPaddingLeft="10dp"
            app:contentPaddingRight="10dp"
            app:contentPaddingTop="10dp"
            app:cardCornerRadius="11dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/muscle_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/muscle_group_label"
                    android:textColor="#424242"
                    android:textSize="25sp" />

                <TextView

                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_label"
                    android:textColor="#424242"
                    android:textSize="17sp"
                    android:textStyle="italic" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>